--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -3,7 +3,7 @@
     display: grid;
     gap: 6px;
     margin-top: 20px;
-    max-width: 500px;
+    max-width: 95%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -33,6 +33,10 @@
 .txt-center{
     text-align: center;
     letter-spacing: 1px;
+}
+
+.uppercase {
+    text-transform: uppercase;
 }
 
 /* Cambia el color de la butaca seleccionada */
@@ -186,3 +190,71 @@
         text-align: center;
     }
 }
+
+.formulario-reserva {
+    max-width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fdfdfd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.campo-formulario {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.campo-formulario label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.campo-formulario input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+}
+
+.campo-formulario input:focus {
+    outline: none;
+    border-color: #800000;
+    box-shadow: 0 0 5px rgba(128, 0, 0, 0.3);
+}
+
+.boton-comprar:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
+  
+  .loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+  }
+  
+  .loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #800000;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+    margin-bottom: 15px;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
