--- a/cinevelvet-frontend/src/css/Administrador.css
+++ b/cinevelvet-frontend/src/css/Administrador.css
@@ -32,7 +32,7 @@
 .admin-container button {
   width: 100%;
   padding: 12px;
-  background-color: #007bff;
+  background-color: #970000c2;
   color: white;
   border: none;
   border-radius: 4px;
@@ -42,14 +42,15 @@
 }
 
 .admin-container button:hover {
-  background-color: #0056b3;
+  background-color: #970000c2;
 }
 
 .admin-container div {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 10px 0;
+  border-radius: 4px;
+
 }
 
 .admin-container label {
@@ -58,7 +59,7 @@
 }
 
 .admin-container input[type="checkbox"] {
-  margin-right: 350px;
+  margin-right: 500px;
 }
 
 .admin-container .error {
