--- a/cinevelvet-frontend/src/css/Dashboard.css
+++ b/cinevelvet-frontend/src/css/Dashboard.css
@@ -12,6 +12,29 @@
   box-sizing: border-box;
 }
 
+@media (max-width: 768px) {
+  .admin-icon {
+    top: 10px;
+    right: 10px;
+    padding: 6px;
+    font-size: 18px;
+  }
+
+  .logo {
+    width: 150px;
+  }
+
+  .dashboard-title {
+    font-size: 18px;
+  }
+
+  .menu-button {
+    font-size: 16px;
+    padding: 10px;
+  }
+}
+
+
 .dashboard-header {
   display: flex;
   justify-content: flex-end;
@@ -40,7 +63,7 @@
 
 .dashboard-sidebar {
   width: 100%;
-  background-color: #34495e;
+  background-color: #4b4b4bc2;
   color: white;
   padding: 2vw;
   border-radius: 0;
