--- a/cinevelvet-frontend/src/css/Peliculas.css
+++ b/cinevelvet-frontend/src/css/Peliculas.css
@@ -41,13 +41,13 @@
 }
 
 .crear-button {
-  background-color: #2980b9;
+  background-color: #970000c2;
   color: #ffffff;
   width: 100%;
 }
 
 .crear-button:hover {
-  background-color: #1f5f8b;
+  background-color: #970000c2;
 }
 
 .formulario-editar {
@@ -145,9 +145,13 @@ textarea {
 }
 
 hr {
-  margin: 2vw 0;
+  margin: 15px;
   border: none;
-  border-top: 1px solid #e1e4e8;
+  border-top: 2px solid #970000c2;
+}
+.h2{
+      text-align: center;
+
 }
 
 .popup-mensaje {
