--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -1,36 +1,88 @@
 /* Layout de la cuadrícula */
 .sala-grid {
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
     gap: 6px;
-    margin-top: 20px;
-    max-width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 5px auto;
+    max-width: fit-content;
+    /* ❗ Se ajusta solo al contenido */
 }
+
 
 /* Estilos para cada butaca */
 .butaca {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4px;
     cursor: pointer;
     position: relative;
     transition: transform 0.2s, background-color 0.3s;
 }
+
 .seatplan__cinema-screen {
     width: 657.6px;
     background: hsla(202, 12%, 44%, 1);
     box-shadow: inset 0 -10px 5px -10px #000;
     color: hsla(0, 0%, 100%, 1);
     letter-spacing: 2px;
-    margin: 20px auto;
-    padding: 2px 0;
+    margin: 50px auto;
     border-bottom-left-radius: .25rem;
     border-bottom-right-radius: .25rem;
 }
+.leyenda-butacas {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 10px;
+    margin-bottom: 1.5rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
-.txt-center{
+.leyenda-item {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 0.95rem;
+    color: #333;
+}
+
+.butaca-contenedor-leyenda {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.leyenda-icono {
+    width: 100%;
+    height: 100%;
+}
+
+.icono-check {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+}
+
+
+.leyenda-icono.seleccionada {
+    filter: brightness(0.7) sepia(1) hue-rotate(100deg) saturate(2);
+
+}
+
+.leyenda-icono.bloqueada {
+    filter: brightness(0.9) sepia(1) hue-rotate(-48deg) saturate(5);
+}
+
+.txt-center {
     text-align: center;
     letter-spacing: 1px;
 }
@@ -44,9 +96,6 @@
     filter: brightness(0.7) sepia(1) hue-rotate(100deg) saturate(2);
 }
 
-.margenes {
-    margin-right: 10px;
-}
 .font {
     font-size: 12px;
 }
@@ -58,9 +107,8 @@
 
 /* Contenedor de la butaca */
 .butaca-contenedor {
-    position: relative;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 
 /* Imagen de la butaca */
@@ -75,7 +123,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 20px; /* Ajustado a tamaño más pequeño */
+    width: 20px;
+    /* Ajustado a tamaño más pequeño */
     height: 20px;
     transform: translate(-50%, -50%);
     pointer-events: none;
@@ -104,7 +153,8 @@
         height: 16px;
     }
 
-    h2, p {
+    h2,
+    p {
         text-align: center;
         font-size: 16px;
     }
@@ -113,12 +163,14 @@
 /* Estilos de los botones */
 .boton-comprar-container {
     display: flex;
-    justify-content: flex-end; /* Alinea a la izquierda */
+    justify-content: flex-end;
+    /* Alinea a la izquierda */
     margin-top: 20px;
 }
 
 .boton-comprar {
-    background-color: #800000; /* granate */
+    background-color: #800000;
+    /* granate */
     color: white;
     padding: 10px 20px;
     border: none;
@@ -152,7 +204,7 @@
     border-radius: 10px;
     max-width: 400px;
     width: 90%;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 
@@ -186,7 +238,8 @@
         height: 35px;
     }
 
-    h2, p {
+    h2,
+    p {
         text-align: center;
     }
 }
@@ -197,7 +250,7 @@
     padding: 20px;
     background-color: #fdfdfd;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .campo-formulario {
@@ -254,7 +307,11 @@
   }
   
   @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
   }
   
+    100% {
+        transform: rotate(360deg);
+    }
+}
