--- a/cinevelvet-frontend/src/css/Home.css
+++ b/cinevelvet-frontend/src/css/Home.css
@@ -6,8 +6,6 @@
   max-width: 100%;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
 @media (min-width: 1024px) {
@@ -43,9 +41,8 @@
   background-size: cover;
   background-position: center;
   filter: blur(0.25px) brightness(1);
-  z-index: 1;  /* Este z-index está bien para que el fondo esté debajo del ícono */
+  z-index: 1;
 }
-
 
 .header-content {
   position: relative;
@@ -58,11 +55,10 @@
 }
 
 .logo {
-  width: 230px;
+  width: 200px;
   height: auto;
   border-radius: 100%;
 }
-
 
 .peliculas-list {
   display: grid;
@@ -107,10 +103,9 @@
   margin-bottom: 0.3em;
 }
 
-
 .pelicula-card img {
-
-  height: auto;
+  width: 200px;
+  height: 280px;
   border-radius: 8px;
   object-fit: cover;
   flex-shrink: 0;
@@ -124,10 +119,10 @@
   padding-left: 10px;
 }
 
-
 @media (min-width: 1024px) {
   .pelicula-card img {
     width: 250px;
+    height: 350px;
   }
 
   .pelicula-info {
@@ -137,6 +132,7 @@
 
 .sesiones {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .sesion-item {
@@ -172,7 +168,14 @@
 @media (max-width: 768px) {
   .logo {
     width: 150px;
-    /* Ajusta a tu gusto */
+  }
+  .pelicula-card {
+    flex-direction: column;
+    align-items: center;
+  }
+  .pelicula-card img {
+    width: 200px;
+    height: 280px;
   }
 }
 
