--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -1,11 +1,13 @@
 /* Layout de la cuadrícula */
 .sala-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
+    grid-template-columns: repeat(5, 30px) 40px repeat(5, 30px);
     gap: 6px;
     margin: 5px auto;
     max-width: fit-content;
 }
+
+
 
 /* Estilos para cada butaca */
 .butaca {
@@ -18,7 +20,7 @@
 }
 
 .seatplan__cinema-screen {
-    width: 657.6px;
+    width: 75% ;
     background: hsla(202, 12%, 44%, 1);
     box-shadow: inset 0 -10px 5px -10px #000;
     color: hsla(0, 0%, 100%, 1);
@@ -27,6 +29,7 @@
     border-bottom-left-radius: .25rem;
     border-bottom-right-radius: .25rem;
 }
+
 .leyenda-butacas {
     display: flex;
     justify-content: center;
@@ -130,7 +133,7 @@
 /* Estilos del pasillo central */
 .pasillo {
     width: 100%;
-    height: 100%; 
+    height: 100%;
 }
 
 /* 📱📲 Estilo para móviles (hasta 480px) */
@@ -226,9 +229,31 @@
 /* 📱📲 Estilo para Tablets (481px a 768px) */
 @media (max-width: 768px) {
     .sala-grid {
-        max-width: 90%;
+        width: auto;
         gap: 5px;
+        grid-template-columns: repeat(5, 20px) 30px repeat(5, 20px);
+        justify-content: center;
     }
+
+    .seatplan__cinema-screen {
+        width: 100%;
+        background: hsla(202, 12%, 44%, 1);
+        box-shadow: inset 0 -10px 5px -10px #000;
+        color: hsla(0, 0%, 100%, 1);
+        letter-spacing: 2px;
+        margin: 50px auto;
+        border-bottom-left-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+    .leyenda-butacas {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 20px;
+    gap: 10px;
+    margin-bottom: 1.5rem;
+    align-items: center;
+    flex-wrap: wrap;
+
 }
 
 .formulario-reserva {
@@ -267,9 +292,9 @@
 .boton-comprar:disabled {
     background-color: #ccc;
     cursor: not-allowed;
-  }
-  
-  .loader-overlay {
+}
+
+.loader-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -281,9 +306,9 @@
     align-items: center;
     justify-content: center;
     z-index: 999;
-  }
-  
-  .loader {
+}
+
+.loader {
     border: 8px solid #f3f3f3;
     border-top: 8px solid #800000;
     border-radius: 50%;
@@ -291,12 +316,17 @@
     height: 60px;
     animation: spin 1s linear infinite;
     margin-bottom: 15px;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
     }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 .cuenta-atras {
     font-weight: bold;
