--- a/cinevelvet-frontend/src/css/Administrador.css
+++ b/cinevelvet-frontend/src/css/Administrador.css
@@ -5,8 +5,8 @@
   margin: 0 auto;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .admin-container h2 {
@@ -43,13 +43,7 @@
   background-color: #970000c2;
 }
 
-.admin-container div {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 4px;
 
-}
 
 .admin-container label {
   font-size: 14px;
@@ -63,7 +57,7 @@
 }
 
 .admin-container input[type="checkbox"] {
-  margin-right: 500px;
+  margin-right: 1000px;
 }
 
 .admin-container .error {
