--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -278,6 +278,7 @@
         margin-bottom: 1.5rem;
         align-items: center;
         flex-wrap: wrap;
+        justify-content: start !important;
 
     }
 }
