--- a/cinevelvet-frontend/src/css/Peliculas.css
+++ b/cinevelvet-frontend/src/css/Peliculas.css
@@ -149,7 +149,7 @@ hr {
 }
 
 .popup-mensaje {
-  background-color: #2ecc71;
+  background-color: #800000;
   color: white;
   padding: 12px 20px;
   border-radius: 8px;
