--- a/cinevelvet-frontend/src/css/Administrador.css
+++ b/cinevelvet-frontend/src/css/Administrador.css
@@ -57,7 +57,7 @@
 }
 
 .admin-container input[type="checkbox"] {
-  margin-right: 1000px;
+  margin-right: 2000px;
 }
 
 .admin-container .error {
@@ -65,4 +65,20 @@
   font-size: 14px;
   margin-top: 10px;
   text-align: center;
+}
+.btn-cerrar-header {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none !important;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+  padding: 0;
+  margin-right: auto;
+  border: none;
+  cursor: pointer;
+  padding: 0 10px;
+  display: flex;
+justify-content: flex-end;
 }
