--- a/cinevelvet-frontend/src/css/Home.css
+++ b/cinevelvet-frontend/src/css/Home.css
@@ -326,7 +326,7 @@ html, body {
   /* 16:9 aspect ratio */
   padding-top: 25px;
   height: 0;
-}
+}}
 
 .video-container iframe {
   position: absolute;
@@ -374,7 +374,7 @@ html, body {
   transform: translate(-50%, -50%);
   background: #800000;
   color: white;
-  padding: 2rem;
+  padding: 10px;
   max-width: 800px;
   width: 90%;
   border-radius: 10px;
@@ -423,7 +423,7 @@ html, body {
 .loader {
     position: fixed;
     top: 50%;
-    left: 50%;
+    left: 42%;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
@@ -454,3 +454,21 @@ html, body {
 }
 
 
+.contacto-footer {
+  background-color: #9a9595;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 4px;
+    border: 1px solid #444;
+}
+
+.contacto-footer a {
+    color: #800000;
+    text-decoration: none;
+}
+
+.contacto-footer a:hover {
+    text-decoration: underline;
+}
