--- a/cinevelvet-frontend/src/css/Peliculas.css
+++ b/cinevelvet-frontend/src/css/Peliculas.css
@@ -78,10 +78,13 @@ textarea {
   resize: vertical;
   min-height: 10vw;
 }
+
 @media (min-width: 1024px) {
-.home-container {
+  .home-container {
     max-width: 1400px;
-  }}
+  }
+}
+
 .btn {
   background-color: #800000;
   color: white;
@@ -121,7 +124,7 @@ textarea {
   margin-top: 2vw;
 }
 
-.margin-bottom{
+.margin-bottom {
   margin-bottom: 20px
 }
 
@@ -146,9 +149,9 @@ hr {
   border: none;
   border-top: 2px solid #970000c2;
 }
-.h2{
-      text-align: center;
 
+.h2 {
+  text-align: center;
 }
 
 .popup-mensaje-peliculas {
@@ -164,10 +167,16 @@ hr {
   margin-top: 10px;
 }
 
-
 @keyframes fadein {
-  from { opacity: 0; transform: translateY(-5px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .mensaje-centrado {
