--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -18,7 +18,7 @@
 }
 
 .seatplan__cinema-screen {
-    width: 430px;
+    width: 50%;
     background: hsla(202, 12%, 44%, 1);
     box-shadow: inset 0 -10px 5px -10px #000;
     color: hsla(0, 0%, 100%, 1);
@@ -174,8 +174,15 @@
     transition: background-color 0.3s ease;
 }
 
-.boton-comprar:hover {
-    background-color: #660000;
+.boton-repetir-compra {
+    background-color: #555;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 /* Popup */
@@ -230,7 +237,7 @@
     }
 
     .seatplan__cinema-screen {
-        width: 100%;
+        width: auto;
         background: hsla(202, 12%, 44%, 1);
         box-shadow: inset 0 -10px 5px -10px #000;
         color: hsla(0, 0%, 100%, 1);
@@ -239,20 +246,10 @@
         border-bottom-left-radius: .25rem;
         border-bottom-right-radius: .25rem;
     }
-
-    .leyenda-butacas {
-        display: flex;
-        margin-top: 20px;
-        gap: 10px;
-        margin-bottom: 1.5rem;
-        align-items: center;
-        flex-wrap: wrap;
-
-    }
 }
 
 /* 📱📲 Estilo para moviles medianos (min 350px and max 768px) */
-@media (min-width: 350px) and (max-width: 768px) {
+@media (min-width: 348px) and (max-width: 768px) {
     .sala-grid {
         width: auto;
         gap: 5px;
@@ -261,7 +258,7 @@
     }
 
     .seatplan__cinema-screen {
-        width: 100%;
+        width: auto;
         background: hsla(202, 12%, 44%, 1);
         box-shadow: inset 0 -10px 5px -10px #000;
         color: hsla(0, 0%, 100%, 1);
@@ -270,21 +267,10 @@
         border-bottom-left-radius: .25rem;
         border-bottom-right-radius: .25rem;
     }
-
-    .leyenda-butacas {
-        display: flex;
-        margin-top: 20px;
-        gap: 10px;
-        margin-bottom: 1.5rem;
-        align-items: center;
-        flex-wrap: wrap;
-        justify-content: start !important;
-
-    }
 }
 
 /* 📱📲 Estilo para moviles grandes y tablet (min 768px and max 1024px) */
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
     .sala-grid {
         width: auto;
         gap: 5px;
@@ -293,7 +279,7 @@
     }
 
     .seatplan__cinema-screen {
-        width: 100%;
+        width: 50%;
         background: hsla(202, 12%, 44%, 1);
         box-shadow: inset 0 -10px 5px -10px #000;
         color: hsla(0, 0%, 100%, 1);
@@ -301,17 +287,6 @@
         margin: 50px auto;
         border-bottom-left-radius: .25rem;
         border-bottom-right-radius: .25rem;
-    }
-
-    .leyenda-butacas {
-        display: flex;
-        justify-content: flex-start;
-        margin-top: 20px;
-        gap: 10px;
-        margin-bottom: 1.5rem;
-        align-items: center;
-        flex-wrap: wrap;
-
     }
 }
 
