--- a/cinevelvet-frontend/src/css/Dashboard.css
+++ b/cinevelvet-frontend/src/css/Dashboard.css
@@ -89,11 +89,14 @@
 }
 
 .dashboard-title {
-    font-size: 18px;
-  margin-bottom: 1.5vw;
-  font-weight: 600;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-  padding-bottom: 1vw;
+  font-size: 24px;
+  font-weight: 500;
+  color: #2c3e50;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-bottom: 2px solid #e1e8e7;
+  padding-bottom: 10px;
 }
 
 .dashboard-nav {
