--- a/cinevelvet-frontend/src/css/Home.css
+++ b/cinevelvet-frontend/src/css/Home.css
@@ -303,7 +303,7 @@ body {
   .loader {
     position: fixed;
     top: 50% !important;
-    left: 42% !important;
+    left: 42.5% !important;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
@@ -318,7 +318,6 @@ body {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   }
 }
-
 
 @media (max-width: 768px) {
 
@@ -512,7 +511,7 @@ body {
 
 .contacto-footer {
   background-color: #9a9595;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-align: center;
   padding: 10px;
   margin-top: 10px;
@@ -529,15 +528,7 @@ body {
   text-decoration: underline;
 }
 
-.fade-in {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeIn 0.6s ease forwards;
-}
-
-@keyframes fadeIn {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.link-clean {
+  text-decoration: none;
+  color: inherit;
 }
